# asr-test-case

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
config/: .env.template
docker/: Dockerfile  docker-compose.prod.yml
docker/django/: Dockerfile  entrypoint.sh  gunicorn.sh
server/: asgi.py  urls.py
server/apps/core/: __init__.py  celery.py
server/apps/notifications/: admin.py  forms.py  models.py  tasks.py  views.py
server/apps/notifications/logic/: classes.py  services.py
server/apps/notifications/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20210719_0233.py  0003_auto_20210720_0341.py
server/apps/users/: models.py
server/apps/users/migrations/: 0001_initial.py  0002_auto_20210719_0431.py  0002_auto_20210720_0341.py
server/settings/components/: caches.py  common.py
server/settings/environments/: autotest.py  development.py  local.py.template  production.py
server/templates/html/: index.html
server/templates/txt/: humans.txt
src/: asgi.py  manage.py  urls.py
src/apps/core/: celery.py  mixins.py
src/apps/core/taskapp/: celery.py
src/apps/notifications/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
src/apps/notifications/migrations/: 0001_initial.py  0002_initial.py
src/apps/notifications/services/: email_service.py  push_service.py
src/apps/user/: models.py
src/apps/users/: models.py
src/apps/users/migrations/: 0001_initial.py  0002_auto_20210716_1436.py  0002_auto_20210716_1707.py  0003_auto_20210716_1730.py
src/apps/users/templates/: send_notifications.html
src/settings/: .env  .env.example  base.py  dev.py  production.py  urls.py
src/templates/notifications/: push_message.html
src/tests/: conftest.py
tests/: conftest.py
tests/apps/notifications/: test_classes.py  test_services.py
tests/test_apps/test_main/test_views/: test_index_view.py
