[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["NickiHell <nickihell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"
celery = "^5.1.2"
Faker = "^8.10.1"
psycopg2-binary = "*"
pydantic = "^1.8.2"
django-celery-beat = "*"
django-celery-results = "*"
django-dotenv = "^1.4.2"


[tool.poetry.dev-dependencies]
coverage = "*"
django-coverage-plugin = "*"
django-debug-toolbar = "*"
django-dotenv = "*"
django-extensions = "*"
django-querycount = "*"
factory-boy = "*"
flake8 = "*"
ipython = "*"
nplusone = "*"
pylint = "*"
pytest-django = "*"
pytest = "*"
taskipy = "*"
flakehell = "^0.9.0"
wemake-python-styleguide = "^0.15.2"
flake8-functions = "^0.0.6"
isort = "^5.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
isort = "isort src"
isort-lint = "isort --check-only src"
flakehell-lint = "flakehell lint --jobs 8"


[tool.flakehell]
#baseline = ".flakehell_baseline"
extended_default_ignore = [] # https://github.com/flakehell/flakehell/issues/10
format = "grouped"
max_complexity = 10
max_function_length = 24
max_line_length = 120
show_source = true
statistics = true

[tool.flakehell.plugins]
flake8 = ["+*"]
flake8-functions = ["+*"]
flake8-eradicate = ["+*"]
flake8-bugbear = ["+*"]
flake8-comprehensions = ["+*"]
flake8-commas = ["+*"]
flake8-quotes = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E501"]
wemake-python-styleguide = ["+*", "-WPS305"]
